--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,16 @@
 {
-  "plugins": ["prettier-plugin-svelte"],
-  "useTabs": false,
-  "tabWidth": 2,
+  "plugins": [
+    "prettier-plugin-svelte"
+  ],
+  "useTabs": true,
+  "tabWidth": 4,
   "semi": false,
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
