--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "update-types": "npx supabase gen types typescript --project-id qawnesxmbsgejrpjlcei --schema public > src/DatabaseDefinitions.ts",
     "test": "vitest",
     "test_run": "vitest run",
     "lint": "eslint .",
@@ -48,7 +49,12 @@
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
+    "bits-ui": "^0.21.13",
+    "clsx": "^2.1.1",
+    "lucide-svelte": "^0.438.0",
     "resend": "^3.5.0",
-    "stripe": "^13.3.0"
+    "stripe": "^13.3.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1"
   }
 }
