--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "super-sitemap": "^0.15.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "sveltekit-superforms": "^2.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "zod": "^3.23.8"
   },
   "type": "module",
   "dependencies": {
