--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "super-sitemap": "^0.15.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
-    "sveltekit-superforms": "^2.17.0",
+    "sveltekit-superforms": "^2.18.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
@@ -53,6 +53,7 @@
     "@supabase/supabase-js": "^2.45.2",
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
+    "formsnap": "^1.0.1",
     "lucide-svelte": "^0.438.0",
     "resend": "^3.5.0",
     "stripe": "^13.3.0",
