--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
   },
   "type": "module",
   "dependencies": {
+    "@internationalized/date": "^3.5.6",
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
-    "bits-ui": "^0.21.13",
+    "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
     "formsnap": "^1.0.1",
     "lucide-svelte": "^0.438.0",
