--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.15",
-    "bits-ui": "^0.21.16",
+    "bits-ui": "^1.0.0-next.32",
+    "bits-ui-1": "npm:bits-ui@^1.0.0-next.31",
+    "clsx": "^2.1.1",
     "daisyui": "^4.7.3",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.1.0",
@@ -42,7 +44,10 @@
     "svelte": "^5",
     "svelte-check": "^3.4.3",
     "sveltekit-superforms": "^2.18.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0",
@@ -54,12 +59,9 @@
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
-    "clsx": "^2.1.1",
     "formsnap": "^1.0.1",
     "resend": "^3.5.0",
     "stripe": "^13.3.0",
-    "svelte-headless-table": "^0.18.2",
-    "tailwind-merge": "^2.5.2",
-    "tailwind-variants": "^0.2.1"
+    "svelte-headless-table": "^0.18.2"
   }
 }
