--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/kit": "^2.7.5",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/glob": "^8.1.0",
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.15",
-    "bits-ui": "^1.0.0-next.32",
+    "bits-ui": "^1.0.0-next.45",
     "bits-ui-1": "npm:bits-ui@^1.0.0-next.31",
     "clsx": "^2.1.1",
     "daisyui": "^4.7.3",
@@ -60,6 +60,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
     "formsnap": "^1.0.1",
+    "geist": "^1.3.1",
     "resend": "^3.5.0",
     "stripe": "^13.3.0",
     "svelte-headless-table": "^0.18.2"
