--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.15",
-    "bits-ui": "^1.0.0-next.45",
+    "bits-ui": "^1.0.0-next.49",
     "bits-ui-1": "npm:bits-ui@^1.0.0-next.31",
     "clsx": "^2.1.1",
     "daisyui": "^4.7.3",
@@ -55,6 +55,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fontsource/geist-sans": "^5.1.0",
     "@internationalized/date": "^3.5.6",
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/ssr": "^0.5.1",
