--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format_check": "prettier --check --plugin prettier-plugin-svelte ./"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.5.6",
     "@sveltejs/adapter-auto": "^3.2.0",
     "@sveltejs/kit": "^2.7.5",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -26,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.15",
-    "bits-ui": "^1.0.0-next.49",
+    "bits-ui": "^1.0.0-next.63",
     "bits-ui-1": "npm:bits-ui@^1.0.0-next.31",
     "clsx": "^2.1.1",
     "daisyui": "^4.7.3",
@@ -56,10 +57,10 @@
   "type": "module",
   "dependencies": {
     "@fontsource/geist-sans": "^5.1.0",
-    "@internationalized/date": "^3.5.6",
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
+    "@tanstack/table-core": "^8.20.5",
     "formsnap": "^1.0.1",
     "geist": "^1.3.1",
     "resend": "^3.5.0",
